--- a/Rigo_A4_DL_TC5033_text_generator.ipynb
+++ b/Rigo_A4_DL_TC5033_text_generator.ipynb
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "eWIUkG4zm0ty"
       },
@@ -328,30 +328,31 @@
         "def train(model, epochs, optimizer):\n",
         "    model = model.to(device) # to move our tensor model to the specified computing device\n",
         "    model.train() # Set the model to training mode (to activate training specific behaviors)\n",
-        "    criterion = nn.CrossEntropyLoss() #\n",
+        "    criterion = nn.CrossEntropyLoss() # CrossEntropy criterion selecting for training, combining softmax activiation and negative log.\n",
+        "    # Computing the loss regarding the models predictions and true labels.\n",
         "\n",
-        "    for epoch in range(epochs):\n",
-        "        total_loss = 0\n",
+        "    for epoch in range(epochs): # For loop for each training epoch.\n",
+        "        total_loss = 0 # Initializing total_loss in zero\n",
         "        for data, targets in train_loader:\n",
         "            # Zero the gradients\n",
         "            optimizer.zero_grad()\n",
         "\n",
-        "            # Send the input data and targets to the device\n",
+        "            # Send the input data and targets to the computing device\n",
         "            data, targets = data.to(device), targets.to(device)\n",
         "\n",
         "            # Initialize hidden state\n",
-        "            hidden = model.init_hidden(batch_size)\n",
-        "            hidden = (hidden[0].to(device), hidden[1].to(device))\n",
+        "            hidden = model.init_hidden(batch_size) # Calling init_hidden class to create a 3D tensor filled with zeros of the batch size\n",
+        "            hidden = (hidden[0].to(device), hidden[1].to(device))  # Moving hidden tensor to device\n",
         "\n",
         "            # Forward pass\n",
-        "            output, hidden = model(data, hidden)\n",
+        "            output, hidden = model(data, hidden) # concatenation of the forward and reverse hidden state of the model at each time step in the sequence\n",
         "\n",
         "            # Reshape output and targets for loss calculation\n",
         "            output = output.view(-1, vocab_size)\n",
         "            targets = targets.view(-1)\n",
         "\n",
         "            # Compute the loss\n",
-        "            loss = criterion(output, targets)\n",
+        "            loss = criterion(output, targets) # Using CrossEntropyLoss\n",
         "\n",
         "            # Backpropagation\n",
         "            loss.backward()\n",
@@ -364,7 +365,7 @@
         "\n",
         "        # Calculate average loss\n",
         "        average_loss = total_loss / len(train_loader)\n",
-        "        print(f'Epoch {epoch + 1}/{epochs} - Loss: {average_loss:.4f}')"
+        "        print(f'Epoch {epoch + 1}/{epochs} - Loss: {average_loss:.4f}') # printing for each epoch the average_loss computed"
       ],
       "id": "eWIUkG4zm0ty"
     },
@@ -416,11 +417,11 @@
       ],
       "source": [
         "# Call the train function\n",
-        "loss_function = nn.CrossEntropyLoss()\n",
-        "lr = 0.00005\n",
-        "epochs = 30\n",
-        "optimiser = optim.AdamW(model.parameters(), lr=lr)\n",
-        "train(model, epochs, optimiser)"
+        "loss_function = nn.CrossEntropyLoss() # Loss criterion definition\n",
+        "lr = 0.00005 # Learning rate definition\n",
+        "epochs = 30 # Number of epocs definition\n",
+        "optimiser = optim.AdamW(model.parameters(), lr=lr) # Model optimizer definition\n",
+        "train(model, epochs, optimiser) # Training the model with defined parameters"
       ]
     },
     {
@@ -444,44 +445,47 @@
         "# Now, let's implement the text generation function\n",
         "\n",
         "def generate_text(model, vocab, tokenizer, start_text, num_words, temperature=1.0, device='cuda'):\n",
-        "    model.eval()  # Turn on evaluation mode\n",
-        "    words = tokenizer(start_text)\n",
-        "    state_h, state_c = model.init_hidden(1)\n",
+        "    model.eval()  # Set mode to evaluation\n",
+        "    words = tokenizer(start_text) # Tokenizing the input text\n",
+        "    state_h, state_c = model.init_hidden(1) # Initializing hidden state\n",
         "\n",
         "    # Move the initial states to the device\n",
         "    state_h = state_h.to(device)\n",
         "    state_c = state_c.to(device)\n",
         "\n",
         "    # Warm-up the hidden state by passing the seed words\n",
-        "    for w in words:\n",
-        "        ix = torch.tensor([[vocab[w]]]).to(device)\n",
-        "        output, (state_h, state_c) = model(ix, (state_h, state_c))\n",
+        "    for w in words: # for every word in every tokenized sentence\n",
+        "        ix = torch.tensor([[vocab[w]]]).to(device) # Retrieves index for each word in vocabulary, used to create a Pytorch tensor\n",
+        "        output, (state_h, state_c) = model(ix, (state_h, state_c)) # getting hidden states for capturing the context of previous steps\n",
+        "        # and the output predictions of the model\n",
         "\n",
         "    # The new word is generated here after the warm-up\n",
         "    words.append(vocab.lookup_token(torch.argmax(output[0, -1]).item()))\n",
         "\n",
         "    # Generate the subsequent words\n",
-        "    for _ in range(num_words - len(words)):\n",
-        "        ix = torch.tensor([[vocab[words[-1]]]]).to(device)\n",
+        "    for _ in range(num_words - len(words)): # for loop meanwhile the amount of word is less than \"num_words\"\n",
+        "        ix = torch.tensor([[vocab[words[-1]]]]).to(device) # Again - Retrieves index for each word in vocabulary, used to create a Pytorch tensor\n",
         "        with torch.no_grad():  # No need to track history in prediction mode\n",
-        "            output, (state_h, state_c) = model(ix, (state_h, state_c))\n",
+        "            output, (state_h, state_c) = model(ix, (state_h, state_c)) # Again - getting hidden states for capturing the context of previous steps\n",
+        "        # and the output predictions of the model\n",
         "\n",
         "        # Get the last word in the tensor of outputs, apply the temperature scaling\n",
         "        # and softmax to get probabilities\n",
-        "        probabilities = F.softmax(output[0, -1] / temperature, dim=0).detach().cuda()\n",
-        "        word_idx = torch.multinomial(probabilities, 1).item()\n",
+        "        probabilities = F.softmax(output[0, -1] / temperature, dim=0).detach().cuda() # Probability definition for introducing controlled randomness\n",
+        "        word_idx = torch.multinomial(probabilities, 1).item() # Generating a word index based on the probability distribution obtained from\n",
+        "        # the output of the model\n",
         "\n",
         "        # Add the generated word to the sequence\n",
         "        words.append(vocab.lookup_token(word_idx))\n",
         "\n",
-        "    return ' '.join(words)\n",
+        "    return ' '.join(words) # Returning the words generated with '' spaces in between.\n",
         "\n",
         "# As with the train function, this code requires the model and related components to be defined.\n",
         "# The actual vocabulary object, tokenizer, and the model should be passed to this function when called.\n",
         "\n",
         "\n",
-        "# Generate some text\n",
-        "print(generate_text(model, vocab, tokeniser, start_text=\"My family is\", num_words=100, temperature=1.0, device='cuda'))\n"
+        "# Generate some text - 1:\n",
+        "print(generate_text(model, vocab, tokeniser, start_text=\"My family is\", num_words=100, temperature=1.0, device='cuda'))"
       ]
     },
     {
@@ -502,7 +506,7 @@
         }
       ],
       "source": [
-        "# Generate some text\n",
+        "# Generate some text - 2:\n",
         "print(generate_text(model, vocab, tokeniser, start_text=\"The planets in the solar system are\", num_words=100, temperature=1.0,  device='cuda'))"
       ]
     },
@@ -524,39 +528,20 @@
         }
       ],
       "source": [
-        "# Generate some text\n",
+        "# Generate some text - 3:\n",
         "print(generate_text(model, vocab, tokeniser, start_text=\"Thank you professor for\", num_words=100, temperature=1.0, device='cuda'))"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "1cb126a2",
+      "cell_type": "markdown",
+      "source": [
+        "**Bibliography:**\n",
+        "* asas"
+      ],
       "metadata": {
-        "id": "1cb126a2"
+        "id": "7hOpJzrhjgWY"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6de373d8",
-      "metadata": {
-        "id": "6de373d8"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "68d82438",
-      "metadata": {
-        "id": "68d82438"
-      },
-      "outputs": [],
-      "source": []
+      "id": "7hOpJzrhjgWY"
     }
   ],
   "metadata": {
