--- a/Rigo_A4_DL_TC5033_text_generator.ipynb
+++ b/Rigo_A4_DL_TC5033_text_generator.ipynb
@@ -536,7 +536,8 @@
       "cell_type": "markdown",
       "source": [
         "**Bibliography:**\n",
-        "* asas"
+        "* LSTM — PyTorch 2.1 documentation. (n.d.). https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html\n",
+        "* Anis, A. (2022, March 17). PyTorch LSTM: The Definitive Guide | cnvrg.io. cnvrg. https://cnvrg.io/pytorch-lstm/"
       ],
       "metadata": {
         "id": "7hOpJzrhjgWY"
