--- a/ProyectoFinal.ipynb
+++ b/ProyectoFinal.ipynb
@@ -35,7 +35,8 @@
       "outputs": [],
       "source": [
         "# Importing the libraries:\n",
-        "import torch\n",
+        "import torch # Import the PyTorch library\n",
+        "import torch.nn as nn # Import the neural network module from PyTorch\n",
         "import torchvision.transforms as transforms # for data transformations.\n",
         "from PIL import Image # For image visualizarion\n",
         "from torch.nn.utils.rnn import pad_sequence # Used to pad a list of variable-length sequences to the same length (for RNN)\n",
@@ -95,54 +96,72 @@
         "            for token in tokenized_text\n",
         "        ]\n",
         "\n",
+        "\n",
         "class FlickrDataset(Dataset):\n",
         "    def __init__(self, root_dir, captions_file, transform=None, freq_threshold=5):\n",
+        "        # Store root directory, captions file path, and transformation function\n",
         "        self.root_dir = root_dir\n",
         "        self.df = pd.read_csv(captions_file)\n",
         "\n",
-        "        # Handling missing or non-string values in captions\n",
+        "        # Handling missing or non-string values in captions by filling NaN values with an empty string\n",
         "        self.df['caption'] = self.df['caption'].fillna('').astype(str)\n",
         "\n",
+        "        # Store the transformation function for images\n",
         "        self.transform = transform\n",
         "\n",
-        "        # Get img, caption columns\n",
+        "        # Get 'image' and 'caption' columns from the DataFrame\n",
         "        self.imgs = self.df[\"image\"]\n",
         "        self.captions = self.df[\"caption\"]\n",
         "\n",
-        "        # Initialize vocabulary and build vocab\n",
+        "        # Initialize a vocabulary object with a specified frequency threshold\n",
         "        self.vocab = Vocabulary(freq_threshold)\n",
+        "\n",
+        "        # Build the vocabulary using the captions in the dataset\n",
         "        self.vocab.build_vocabulary(self.captions.tolist())\n",
         "\n",
         "    # rest of the class remains the same\n",
-        "\n",
-        "\n",
         "    def __len__(self):\n",
+        "        # Return the total number of samples in the dataset\n",
         "        return len(self.df)\n",
         "\n",
         "    def __getitem__(self, index):\n",
+        "        # Get caption and image ID for the given index\n",
         "        caption = self.captions[index]\n",
         "        img_id = self.imgs[index]\n",
+        "\n",
+        "        # Load image from file using PIL and convert to RGB\n",
         "        img = Image.open(os.path.join(self.root_dir, img_id)).convert(\"RGB\")\n",
         "\n",
+        "        # Apply the specified transformation to the image if available\n",
         "        if self.transform is not None:\n",
         "            img = self.transform(img)\n",
         "\n",
+        "        # Numericalize the caption by converting it to a list of indices\n",
         "        numericalized_caption = [self.vocab.stoi[\"<SOS>\"]]\n",
         "        numericalized_caption += self.vocab.numericalize(caption)\n",
         "        numericalized_caption.append(self.vocab.stoi[\"<EOS>\"])\n",
         "\n",
+        "        # Return the image and its numericalized caption as a torch tensor\n",
         "        return img, torch.tensor(numericalized_caption)\n",
+        "\n",
         "\n",
         "class MyCollate:\n",
         "    def __init__(self, pad_idx):\n",
+        "        # Constructor to initialize the collate function with the specified padding index\n",
         "        self.pad_idx = pad_idx\n",
         "\n",
         "    def __call__(self, batch):\n",
+        "        # __call__ method is called when an instance of the class is called as a function\n",
+        "\n",
+        "        # Extract images and targets from the batch\n",
         "        imgs = [item[0].unsqueeze(0) for item in batch]\n",
-        "        imgs = torch.cat(imgs, dim=0)\n",
+        "        imgs = torch.cat(imgs, dim=0) # Concatenate images along the batch dimension\n",
         "        targets = [item[1] for item in batch]\n",
+        "\n",
+        "        # Pad the sequences in targets to create a batch\n",
         "        targets = pad_sequence(targets, batch_first=False, padding_value=self.pad_idx)\n",
         "\n",
+        "        # Return the collated batch containing images and padded targets\n",
         "        return imgs, targets\n",
         "\n",
         "# Transformations for the image\n",
@@ -153,7 +172,7 @@
         "    ]\n",
         ")\n",
         "\n",
-        "# DataLoader\n",
+        "# DataLoader function\n",
         "def get_loader(\n",
         "    root_folder,\n",
         "    annotation_file,\n",
@@ -163,20 +182,24 @@
         "    shuffle=True,\n",
         "    pin_memory=True,\n",
         "):\n",
+        "    # Create a FlickrDataset instance with the specified parameters\n",
         "    dataset = FlickrDataset(root_folder, annotation_file, transform=transform)\n",
         "\n",
+        "    # Get the padding index from the vocabulary of the dataset\n",
         "    pad_idx = dataset.vocab.stoi[\"<PAD>\"]\n",
         "\n",
+        "    # Create a DataLoader with the dataset and other specified parameters\n",
         "    loader = DataLoader(\n",
         "        dataset=dataset,\n",
         "        batch_size=batch_size,\n",
         "        num_workers=num_workers,\n",
         "        shuffle=shuffle,\n",
         "        pin_memory=pin_memory,\n",
-        "        collate_fn=MyCollate(pad_idx=pad_idx),\n",
+        "        collate_fn=MyCollate(pad_idx=pad_idx), # Use the custom collate function\n",
         "    )\n",
         "\n",
-        "    return loader, dataset.vocab\n"
+        "    # Return the DataLoader and the vocabulary of the dataset\n",
+        "    return loader, dataset.vocab"
       ]
     },
     {
@@ -188,18 +211,16 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "# Use Spacy for tokenization\n",
+        "# Use Spacy for tokenization - Load the English language model from SpaCy\n",
         "spacy_eng = spacy.load(\"en_core_web_sm\")\n",
         "\n",
-        "# Initialize the data loader and get the vocabulary\n",
+        "# Set the root folder and annotation file paths\n",
         "root_folder='flickr30k_images/flickr30k_images'\n",
         "annotation_file='flickr30k_images/results.csv'\n",
         "#annotation_file = annotation_file['caption'].astype(str)\n",
         "\n",
-        "data_loader, vocab = get_loader(root_folder, annotation_file, transform)\n",
-        "\n"
+        "# Initialize the data loader and get the vocabulary\n",
+        "data_loader, vocab = get_loader(root_folder, annotation_file, transform)"
       ]
     },
     {
@@ -231,30 +252,60 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
         "class EncoderCNN(nn.Module):\n",
         "    def __init__(self, embed_size, train_CNN=False):\n",
+        "        \"\"\"\n",
+        "        EncoderCNN initializes a CNN-based image encoder.\n",
+        "\n",
+        "        Args:\n",
+        "        - embed_size (int): Size of the output embedding.\n",
+        "        - train_CNN (bool): Flag indicating whether to train the CNN layers.\n",
+        "        \"\"\"\n",
         "        super(EncoderCNN, self).__init__()\n",
         "        self.train_CNN = train_CNN\n",
+        "\n",
+        "        # Load pre-trained ResNet-50 model from torchvision\n",
         "        self.inception = resnet50(pretrained=True)\n",
+        "\n",
+        "        # Replace the final fully connected layer to match the desired embed_size\n",
         "        self.inception.fc = nn.Linear(self.inception.fc.in_features, embed_size)\n",
+        "\n",
+        "        # Additional layers for non-linearity and dropout\n",
         "        self.relu = nn.ReLU()\n",
         "        self.dropout = nn.Dropout(0.5)\n",
         "\n",
         "    def forward(self, images):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the EncoderCNN.\n",
+        "\n",
+        "        Args:\n",
+        "        - images (torch.Tensor): Input images.\n",
+        "\n",
+        "        Returns:\n",
+        "        - torch.Tensor: Output embedding.\n",
+        "        \"\"\"\n",
+        "        # Pass images through the modified ResNet-50 model\n",
         "        features = self.inception(images)\n",
         "\n",
-        "        # Don't backpropagate through the entire network if not training CNN\n",
+        "        # Don't backpropagate through the entire network/layers if not training CNN\n",
         "        if not self.train_CNN:\n",
         "            for param in self.inception.parameters():\n",
         "                param.requires_grad = False\n",
         "\n",
+        "        # Apply dropout and ReLU activation\n",
         "        return self.dropout(self.relu(features))\n",
         "\n",
         "class DecoderRNN(nn.Module):\n",
         "    def __init__(self, embed_size, hidden_size, vocab_size, num_layers):\n",
+        "        \"\"\"\n",
+        "        DecoderRNN initializes an RNN-based caption decoder.\n",
+        "\n",
+        "        Args:\n",
+        "        - embed_size (int): Size of the input embedding.\n",
+        "        - hidden_size (int): Size of the hidden state in the LSTM.\n",
+        "        - vocab_size (int): Size of the vocabulary.\n",
+        "        - num_layers (int): Number of layers in the LSTM.\n",
+        "        \"\"\"\n",
         "        super(DecoderRNN, self).__init__()\n",
         "        self.embed = nn.Embedding(vocab_size, embed_size)\n",
         "        self.lstm = nn.LSTM(embed_size, hidden_size, num_layers)\n",
@@ -262,30 +313,81 @@
         "        self.dropout = nn.Dropout(0.5)\n",
         "\n",
         "    def forward(self, features, captions):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the DecoderRNN.\n",
+        "\n",
+        "        Args:\n",
+        "        - features (torch.Tensor): Image features.\n",
+        "        - captions (torch.Tensor): Input captions.\n",
+        "\n",
+        "        Returns:\n",
+        "        - torch.Tensor: Output scores.\n",
+        "        \"\"\"\n",
+        "        # Embed input captions\n",
         "        embeddings = self.dropout(self.embed(captions))\n",
+        "\n",
+        "        # Concatenate image features with embedded captions\n",
         "        embeddings = torch.cat((features.unsqueeze(0), embeddings), dim=0)\n",
+        "\n",
+        "        # Pass through LSTM and linear layer\n",
         "        hiddens, _ = self.lstm(embeddings)\n",
         "        outputs = self.linear(hiddens)\n",
         "        return outputs\n",
         "\n",
         "class CNNtoRNN(nn.Module):\n",
         "    def __init__(self, embed_size, hidden_size, vocab_size, num_layers):\n",
+        "        \"\"\"\n",
+        "        CNNtoRNN initializes a model combining EncoderCNN and DecoderRNN.\n",
+        "\n",
+        "        Args:\n",
+        "        - embed_size (int): Size of the input/output embedding.\n",
+        "        - hidden_size (int): Size of the hidden state in the LSTM.\n",
+        "        - vocab_size (int): Size of the vocabulary.\n",
+        "        - num_layers (int): Number of layers in the LSTM.\n",
+        "        \"\"\"\n",
         "        super(CNNtoRNN, self).__init__()\n",
+        "        # Initialize EncoderCNN and DecoderRNN\n",
         "        self.encoderCNN = EncoderCNN(embed_size)\n",
         "        self.decoderRNN = DecoderRNN(embed_size, hidden_size, vocab_size, num_layers)\n",
         "\n",
         "    def forward(self, images, captions):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the CNNtoRNN model.\n",
+        "\n",
+        "        Args:\n",
+        "        - images (torch.Tensor): Input images.\n",
+        "        - captions (torch.Tensor): Input captions.\n",
+        "\n",
+        "        Returns:\n",
+        "        - torch.Tensor: Output scores.\n",
+        "        \"\"\"\n",
+        "        # Pass images through EncoderCNN\n",
         "        features = self.encoderCNN(images)\n",
+        "\n",
+        "        # Pass features and captions through DecoderRNN\n",
         "        outputs = self.decoderRNN(features, captions)\n",
         "        return outputs\n",
         "\n",
         "    def caption_image(self, image, vocabulary, max_length=50):\n",
+        "        \"\"\"\n",
+        "        Generate captions for images using the trained model.\n",
+        "\n",
+        "        Args:\n",
+        "        - image (torch.Tensor): Input image.\n",
+        "        - vocabulary (Vocabulary): Vocabulary object.\n",
+        "        - max_length (int): Maximum length of generated captions.\n",
+        "\n",
+        "        Returns:\n",
+        "        - List[str]: Generated caption as a list of words.\n",
+        "        \"\"\"\n",
         "        result_caption = []\n",
         "\n",
+        "        # Disable gradient computation during inference\n",
         "        with torch.no_grad():\n",
         "            x = self.encoderCNN(image).unsqueeze(0)\n",
         "            states = None\n",
         "\n",
+        "            # Generate captions word by word\n",
         "            for _ in range(max_length):\n",
         "                hiddens, states = self.decoderRNN.lstm(x, states)\n",
         "                output = self.decoderRNN.linear(hiddens.squeeze(0))\n",
@@ -293,10 +395,12 @@
         "                result_caption.append(predicted.item())\n",
         "                x = self.decoderRNN.embed(predicted).unsqueeze(0)\n",
         "\n",
+        "                # Break if \"<EOS>\" token is predicted\n",
         "                if vocabulary.itos[predicted.item()] == \"<EOS>\":\n",
         "                    break\n",
         "\n",
-        "        return [vocabulary.itos[idx] for idx in result_caption]\n"
+        "        # Convert indices to words using vocabulary\n",
+        "        return [vocabulary.itos[idx] for idx in result_caption]"
       ]
     },
     {
